k8s/jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins
spec:
  selector:
    app: jenkins-server
  ports:
    - name: jenkins-http
      port: 8080
    - name: jenkins-jnlp
      port: 50000
